# mcuserial_design_iv

./: .gitignore  README.md  setup.sh
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/mcuserial_msgs/: RequestParam.h  TopicInfo.h
devel/lib/pkgconfig/: mcu_serial_com_interface.pc  mcuserial_interface.pc  mcuserial_msgs.pc  mcuserial_python.pc  rosserial_arduino.pc  rosserial_chibios.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_vex_cortex.pc  rosserial_vex_v5.pc  rosserial_windows.pc  rosserial_xbee.pc
devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
install/: local_setup.sh  setup.sh
install/include/mcuserial_msgs/: Log.h  RequestParamRequest.h  RequestParamResponse.h
install/lib/mcuserial_python/: serial_node.py
install/lib/pkgconfig/: mcu_serial_com_interface.pc  mcuserial_python.pc  rosserial_arduino.pc  rosserial_embeddedlinux.pc  rosserial_python.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_vex_cortex.pc  rosserial_xbee.pc
install/lib/rosserial_python/: serial_node.py
install/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
src/mcu_interface/mcu_interface/: CMakeLists.txt
src/mcu_interface/mcuserial_lib/mcuros_msgs/: CMakeLists.txt  package.xml  setup.py
src/mcu_interface/mcuserial_lib/mcuros_msgs/src/mcuros_msgs/: McuToRosMsg.py
src/mcu_interface/mcuserial_lib/mcuserial_msgs/: CMakeLists.txt  package.xml
src/mcu_interface/mcuserial_lib/mcuserial_msgs/msg/: dataTemplate.msg
src/mcu_interface/mcuserial_lib/mcuserial_msgs/srv/: RequestParam.srv  alim_serial_com_srv.srv  multiple_call_test.srv
src/mcu_interface/mcuserial_lib/mcuserial_pyhon/: CMakeLists.txt  package.xml
src/mcu_interface/mcuserial_lib/mcuserial_pyhon/nodes/: ToBeRemoved.py  UTSendingData.py  backup.py  comm_protocol_def.py  mainController.py  mcuserial_node.py
src/mcu_interface/mcuserial_lib/mcuserial_pyhon/src/mcuserial_python/: SerialInterface.py  __init__.py  comm_protocol_def.py  mainTranslator.py
src/mcu_interface/mcuserial_lib/mcuserial_pyhon/test/: TestSingleServiceRequest.py  UTAll.py  UTSendingData.py  UTSendingDataMtR_M.py  UTSendingDataMtR_R.py  UTSendingDataRtM.py  UTServiceUsage.py  autre_noeud.py  deployToRpi.sh  multiple_call_service.py  others_noeud.py
(+73 files in other folders)
