<package>
  <name>mcuserial_msgs</name>
  <version>0.0.0</version>
  <description>
    Todo
  </description>
  <author>Rodrigue Kottin</author>
  <maintainer email="kottinrodrigue@gmail.com">Rodrigue Kottin</maintainer>
  
  <license>BSD</license>
  <url>
  
  </url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
</package>
